--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,60 +1,87 @@
 [project]
 name = "irene-voice-assistant"
-version = "12.0.0"
-description = "Ирина - русский голосовой ассистент для работы оффлайн. Поддерживает скиллы через плагины."
+version = "13.0.0"
+description = "Irene - Modern async voice assistant with optional components. Supports plugins and flexible deployment."
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.11"
 dependencies = [
-    # Core audio and speech processing
+    # Core async framework (minimal dependencies)
+    "python-dateutil>=2.6.0",
+    
+    # Configuration and validation
+    "tomli>=1.2.0; python_version<'3.11'",  # tomllib is built-in for 3.11+
+    
+    # Logging and utilities
+    "termcolor>=1.1.0",
+]
+
+[project.optional-dependencies]
+# Audio input components
+audio-input = [
+    "vosk>=0.3.45",
+    "sounddevice>=0.4.0",
+    "soundfile>=0.12.0"
+]
+
+# TTS output components
+tts = [
+    "pyttsx3>=2.90",
+    "elevenlabs>=1.0.3",
+]
+
+# Audio output components
+audio-output = [
+    "sounddevice>=0.4.0",
+    "soundfile>=0.12.0",
+    "audioplayer>=0.6.0",
+]
+
+# Web API components
+web-api = [
+    "fastapi>=0.100.0",
+    "uvicorn[standard]>=0.20.0",
+    "websockets>=11.0.0",
+]
+
+# Configuration management
+config-writing = [
+    "tomli-w>=1.0.0",  # For TOML writing support
+]
+
+# Full voice assistant
+voice = [
+    "irene-voice-assistant[audio-input,tts,audio-output,web-api,config-writing]"
+]
+
+# API server only
+api = [
+    "irene-voice-assistant[web-api,config-writing]"
+]
+
+# Headless mode (text processing only)
+headless = [
+    "irene-voice-assistant[config-writing]"
+]
+
+# All optional components
+all = [
+    "irene-voice-assistant[voice]"
+]
+
+# Legacy v12 compatibility
+v12-compat = [
     "vosk>=0.3.45",
     "vosk-tts>=0.3.52", 
     "sounddevice",
     "soundfile",
     "audioplayer",
     "pyttsx3>=2.90",
-    
-    # Text processing and NLP
     "requests", 
-    "python-dateutil>=2.6.0",
     "wikipedia-api>=0.5.4",
-    
-    # UI and console
-    "termcolor>=1.1.0",
-    
-    # AI and API integrations
     "openai==0.28.0",
     "elevenlabs==1.0.3",
-    
-    # System interaction
     "pyautogui",
-    
-    # File system
     "fsspec==2023.1.0",
-]
-
-[project.optional-dependencies]
-# Web server dependencies for API mode
-web = [
-    "fastapi>=0.81.0",
-    "uvicorn[standard]>=0.18.3",
-    "starlette>=0.19.1",
-]
-
-# UI with gradio (can cause dependency conflicts)
-ui = [
-    "gradio>=4.0.0",
-]
-
-# Executable runner minimal dependencies
-minimal = [
-    "vosk>=0.3.45",
-    "pyttsx3==2.90",
-    "termcolor>=1.1.0",
-    "sounddevice",
-    "soundfile", 
-    "requests",
-    "audioplayer",
-    "python-dateutil",
 ]
 
 # Development dependencies
@@ -64,7 +91,7 @@ dev = [
     "black>=22.0.0",
     "isort>=5.0.0",
     "flake8>=4.0.0",
-    "mypy>=0.900",
+    "mypy>=1.0.0",
 ]
 
 [tool.uv]
@@ -79,7 +106,7 @@ dev-dependencies = [
 
 [tool.black]
 line-length = 100
-target-version = ['py38', 'py39', 'py310', 'py311']
+target-version = ['py311']
 include = '\.pyi?$'
 extend-exclude = '''
 /(
@@ -107,7 +134,7 @@ use_parentheses = true
 ensure_newline_before_comments = true
 
 [tool.mypy]
-python_version = "3.8"
+python_version = "3.11"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = false
