--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,11 @@ dependencies = [
     # Core async framework (minimal dependencies)
     "python-dateutil>=2.6.0",
     
-    # Configuration and validation
+    # Configuration and validation (now required)
+    "pydantic>=2.0.0",
+    "pydantic-settings>=2.0.0",
     "tomli>=1.2.0; python_version<'3.11'",  # tomllib is built-in for 3.11+
+    "tomli-w>=1.0.0",  # For TOML writing support
     
     # Logging and utilities
     "termcolor>=1.1.0",
@@ -45,7 +48,7 @@ web-api = [
 
 # Configuration management
 config-writing = [
-    "tomli-w>=1.0.0",  # For TOML writing support
+    # tomli-w moved to core dependencies
 ]
 
 # Full voice assistant
