--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ audio-input-complete = [
 tts = [
     "pyttsx3>=2.90",
     "elevenlabs>=1.0.3",
+    "httpx>=0.25.0",
 ]
 
 # Audio output components
@@ -56,6 +57,8 @@ audio-output = [
     "sounddevice>=0.4.0",
     "soundfile>=0.12.0",
     "audioplayer>=0.6.0",
+    "simpleaudio>=1.0.4",
+    "numpy>=1.21.0",
 ]
 
 # Web API components
@@ -71,6 +74,12 @@ cloud-asr = [
     "google-auth>=2.17.0",
 ]
 
+# LLM (Large Language Model) components
+llm = [
+    "openai>=1.0.0",
+    "anthropic>=0.25.0",
+]
+
 # Configuration management
 config-writing = [
     # tomli-w moved to core dependencies
@@ -78,6 +87,9 @@ config-writing = [
 
 # Text processing and multilingual support
 text-multilingual = [ # Mycroft AI's multilingual text processing
+    "lingua-franca>=0.4.3",
+    "runorm>=0.1.0",
+    "eng-to-ipa>=0.0.2",
 ]
 
 # Full voice assistant
@@ -97,7 +109,7 @@ headless = [
 
 # All optional components  
 all = [
-    "irene-voice-assistant[voice,cloud-asr,advanced-asr]"  # voice already includes text-multilingual
+    "irene-voice-assistant[voice,cloud-asr,advanced-asr,llm]"  # voice already includes text-multilingual
 ]
 
 # Legacy v12 compatibility
