--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,7 +106,7 @@ wake-word-training = [
     "soundfile>=0.12.1",
     "numpy>=1.21.0",
     
-    # Machine learning (for microwakeword-train)
+    # Machine learning (for TensorFlow training)
     "tensorflow>=2.12.0",
     "librosa>=0.10.0",
     "scipy>=1.9.0",
@@ -163,7 +163,7 @@ all = [
 # Wake word training tools
 irene-record-samples = "wake_word_training.scripts.record_samples:main"
 irene-validate-model = "wake_word_training.scripts.validate_model:main"
-irene-train-wake-word = "wake_word_training.scripts.train_model:main"
+irene-train-wake-word = "wake_word_training.scripts.tensorflow_trainer:main"
 
 # Multi-target model converters
 irene-convert-to-esp32 = "wake_word_training.scripts.converters.to_esp32:main"
