--- a/configs/full.toml
+++ b/configs/full.toml
@@ -36,7 +36,7 @@ credentials_root = "./credentials"
 # COMPONENT SYSTEM - All Components
 # ============================================================
 [components]
-enabled = ["audio", "tts", "asr", "llm", "voice_trigger", "nlu", "text_processor"]
+enabled = ["audio", "tts", "asr", "llm", "voice_trigger", "nlu", "text_processor", "intent_system"]
 disabled = []
 
 # ============================================================
