TODO 7, 8 and 9 - completed

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,7 @@ model/graph/*.fst
 model/ivector/*.dubm
 model/ivector/*.ie
 model/ivector/*.mat
+
+config-ui/node_modules/
+config-ui/dist/
+config-ui/
