--- a/configs/development.toml
+++ b/configs/development.toml
@@ -115,12 +115,23 @@ disabled = []
 default = "openwakeword"
 fallback_providers = []
 
-[providers.nlu]
-# All NLU providers for testing
-enabled = ["rule_based", "spacy"]
-disabled = []
-default = "rule_based"
-fallback_providers = []
+[components.nlu]
+# Cascading provider coordination (JSON donation system)
+enabled = true
+confidence_threshold = 0.5  # Low threshold for testing edge cases
+provider_cascade_order = ["keyword_matcher", "spacy_rules_sm", "spacy_semantic_md", "rule_based"]
+fallback_intent = "conversation.general"
+
+# JSON donation system integration
+donation_collection_enabled = true
+parameter_extraction_enabled = true
+context_processing_enabled = true
+
+# Performance tuning for development
+max_cascade_attempts = 4
+cascade_timeout_ms = 200
+cache_recognition_results = true
+cache_ttl_seconds = 300
 
 [providers.text_processing]
 # All text processing providers
@@ -234,18 +245,116 @@ threshold = 0.6  # Lower threshold for testing
 sample_rate = 16000
 debug_inference = true
 
-# SpaCy NLU Configuration (development)
-[providers.nlu.spacy]
-model_name = "en_core_web_sm"
-confidence_threshold = 0.5
-debug_processing = true
+# NLU Provider Configurations (JSON donation system)
 
-# Rule-based NLU Configuration (development)
-[providers.nlu.rule_based]
-confidence_threshold = 0.5
+# Hybrid Keyword Matcher Provider (development)
+[components.nlu.providers.keyword_matcher]
+enabled = true
+provider_class = "HybridKeywordMatcherProvider"
+
+# Pattern matching configuration
+pattern_confidence = 0.9
+exact_match_boost = 1.2
+flexible_match_boost = 0.9
+partial_match_boost = 0.8
+
+# Fuzzy matching configuration
+fuzzy_enabled = true
+fuzzy_threshold = 0.8
+fuzzy_confidence_base = 0.7
+max_fuzzy_keywords_per_intent = 50
+max_text_length_for_fuzzy = 100
+
+# Performance optimization
+cache_fuzzy_results = true
+fuzzy_cache_size = 1000
 case_sensitive = false
-fuzzy_matching = true
-debug_matching = true
+normalize_unicode = true
+
+# Recognition thresholds
+confidence_threshold = 0.8
+min_pattern_length = 2
+max_pattern_combinations = 100
+
+# Rule-based NLU Provider (development)
+[components.nlu.providers.rule_based]
+enabled = true
+provider_class = "RuleBasedNLUProvider"
+
+# Pattern compilation
+case_sensitive = false
+unicode_normalization = true
+regex_timeout_ms = 10
+
+# Recognition configuration
+confidence_threshold = 0.5  # Low for development testing
+default_confidence = 0.8
+fallback_intent = "conversation.general"
+
+# Performance limits
+max_patterns_per_intent = 20
+pattern_compilation_timeout = 5000
+
+# spaCy Rules Provider (Small Model) - development
+[components.nlu.providers.spacy_rules_sm]
+enabled = true
+provider_class = "SpaCyNLUProvider"
+
+# Model configuration
+model_name = "ru_core_news_sm"
+model_approach = "morphological_rules"
+auto_download = true
+model_cache_expiry = 86400
+
+# Processing configuration
+confidence_threshold = 0.5  # Low for development
+morphology_expansion = true
+pos_tag_weights = {VERB = 1.2, NOUN = 1.1, ADJ = 1.0}
+dependency_parsing = false
+
+# Asset management integration
+download_timeout = 300
+verify_model_integrity = true
+fallback_to_cpu = true
+
+# Performance tuning
+batch_processing = false
+max_doc_length = 1000
+enable_pipeline_caching = true
+
+# spaCy Semantic Provider (Medium Model) - development
+[components.nlu.providers.spacy_semantic_md]
+enabled = true
+provider_class = "SpaCyNLUProvider"
+
+# Model configuration
+model_name = "ru_core_news_md"
+model_approach = "semantic_similarity"
+auto_download = true
+model_cache_expiry = 86400
+
+# Semantic processing
+confidence_threshold = 0.4  # Lower for development testing
+similarity_threshold = 0.75
+vector_similarity_weight = 0.8
+token_similarity_weight = 0.2
+
+# Advanced features
+enable_word_vectors = true
+enable_sentence_vectors = true
+context_window_size = 5
+semantic_boost_keywords = true
+
+# Asset management integration
+download_timeout = 600
+verify_model_integrity = true
+gpu_acceleration = false
+memory_limit_mb = 200
+
+# Performance optimization
+vector_cache_size = 10000
+similarity_cache_ttl = 3600
+enable_batch_similarity = false
 
 # ============================================================
 # DEVELOPMENT FEATURES
